Completed 2nd page

--- a/app/views/welcome/adwertasing_create.html.haml
+++ b/app/views/welcome/adwertasing_create.html.haml
@@ -52,7 +52,7 @@
         .span1
           %a.ad-alert-close-link{href: "#"}
             Close
-            %i.icon-remove-sign
+            %i.fa.fa-times-circle
 
 
 .container
@@ -106,7 +106,7 @@
                     %input#form-file{type: "file", placeholder: "50 characters max"}
                 .span1
                   %a#input-file-toltip{href: "#", title: "We support PNG, JPG or GIF of the following sizes: 120x60, 120x90, 120x240, 120x600, 125x125, 160x90, 160x600, 180x90, 180x150, 200x90, 200x200, 234x60, 240x400, 250x250, 300x250, 320x50, 336x280, 468x15, 469x60, 728x15, 728x90, 990x90"}
-                    %i.icon-question-sign
+                    %i.fa.fa-question-circle
 
           .control-group
             %label.control-label Your files:
@@ -115,19 +115,19 @@
                 .span11
                   %ul.unstyled
                     %li
-                      %i.icon-ok-sign.text-success
+                      %i.fa.fa-check-circle.text-success
                       %strong 180x90  
                       %a{href: "#"} 180x90px-banner-aads-2014.png
-                      %i.icon-remove.text-error
+                      %i.fa.fa-times.text-error
                     %li
-                      %i.icon-exclamation-sign.text-error
+                      %i.fa.fa-exclamation-circle.text-error
                       (invalid size)
                       %span 320x400px-banner-aads-2014.png  
                     %li
-                      %i.icon-ok-sign.text-success
+                      %i.fa.fa-check-circle.text-success
                       %strong 900x90
                       %a{href: "#"} 900x90px-banner-aads-2014.png
-                      %i.icon-remove.text-error
+                      %i.fa.fa-times.text-error
       
       .span4
         .help-block
@@ -172,7 +172,7 @@
           %p.muted.text-center.margin-bottom-30
             CPM: 0.00081708 Ƀ ($0.42), CPC: 0.00001966 Ƀ ($0.01)
             %a.form-toltip.js-tooltip{href: "#", title: "We support PNG, JPG or GIF of the following sizes: 120x60, 120x90, 120x240, 120x600, 125x125, 160x90, 160x600, 180x90, 180x150, 200x90, 200x200, 234x60, 240x400, 250x250, 300x250, 320x50, 336x280, 468x15, 469x60, 728x15, 728x90, 990x90"}
-              %i.icon-question-sign
+              %i.fa.fa-question-circle
 
           %hr.margin-bottom-30
           .margin-bottom-10
@@ -183,7 +183,7 @@
                 .form-adwertasing-code
                   %label 
                     Coupon code
-                    %i.icon-ok-sign.text-success
+                    %i.fa.fa-check-circle.text-success
                   %input{type: "text", placeholder: "Code"}
 
       .span4
@@ -193,21 +193,21 @@
               %strong
                 \~2 539
               %a.form-toltip.js-tooltip{href: "#", title: "We support PNG, JPG or GIF of the following sizes: 120x60, 120x90, 120x240, 120x600, 125x125, 160x90, 160x600, 180x90, 180x150, 200x90, 200x200, 234x60, 240x400, 250x250, 300x250, 320x50, 336x280, 468x15, 469x60, 728x15, 728x90, 990x90"}
-                %i.icon-question-sign
+                %i.fa.fa-question-circle
               .font-size-14
                 ad units
             %li
               %strong
                 \~41 504
               %a.form-toltip.js-tooltip{href: "#", title: "We support PNG, JPG or GIF of the following sizes: 120x60, 120x90, 120x240, 120x600, 125x125, 160x90, 160x600, 180x90, 180x150, 200x90, 200x200, 234x60, 240x400, 250x250, 300x250, 320x50, 336x280, 468x15, 469x60, 728x15, 728x90, 990x90"}
-                %i.icon-question-sign
+                %i.fa.fa-question-circle
               .font-size-14
                 impressions
             %li
               %strong
                 \~1 725 
               %a.form-toltip.js-tooltip{href: "#", title: "We support PNG, JPG or GIF of the following sizes: 120x60, 120x90, 120x240, 120x600, 125x125, 160x90, 160x600, 180x90, 180x150, 200x90, 200x200, 234x60, 240x400, 250x250, 300x250, 320x50, 336x280, 468x15, 469x60, 728x15, 728x90, 990x90"}
-                %i.icon-question-sign
+                %i.fa.fa-question-circle
               .font-size-14
                 clicks per day
 
