--- a/app/assets/stylesheets/_form_create.sass
+++ b/app/assets/stylesheets/_form_create.sass
@@ -32,17 +32,42 @@
 
     .control-label
       text-align: left
-      width: 100px
+      width: 120px
+      font-size: 16px
 
     .controls
       margin:
-        left: 120px
+        left: 140px
 
-    input,
+    input[type="text"],
+    input[type="file"],
     select
       box-sizing: border-box
       width: 100%
       height: 30px
+
+    .control-group.large
+      .control-label
+        width: 300px
+
+      .controls
+        margin:
+          left: 320px
+
+    .control-group.small
+      .control-label
+        width: 0px
+
+      .controls
+        margin:
+          left: 0px
+
+  textarea
+    box-sizing: border-box
+    width: 100%
+    min-width: 100%
+    max-width: 100%
+    height: 100px
 
   .form-title
     margin: 
@@ -50,6 +75,12 @@
     font-size: 32px
     text-align: center
     font-weight: bold
+
+  h3
+    font-size: 20px
+    font-weight: bold
+    margin:
+      bottom: 20
 
   .dscr
     margin:
@@ -141,3 +172,11 @@
       top: 0
       left: -16px
       right: 6px
+
+
+
+.form-adwertasing-section-orange
+  margin: 0 -40px 30px
+  padding: 30px 40px
+  background:
+    color: #fdeac7
