--- a/app/assets/stylesheets/_type.css.sass
+++ b/app/assets/stylesheets/_type.css.sass
@@ -30,6 +30,9 @@ a
   &.underline
     text-decoration: underline
 
+    &:hover
+      text-decoration: none
+
 
 .text-bold
   font-weight: bold
@@ -39,6 +42,9 @@ a
 
 .font-size-15
   font-size: 15px
+
+.font-size-16
+  font-size: 16px
 
 .margin-bottom-10
   margin:
@@ -51,3 +57,19 @@ a
 .margin-bottom-30
   margin:
     bottom: 30px
+
+
+.margin-top-100
+  margin:
+    top: 100px
+
+.margin-bottom-100
+  margin:
+    bottom: 100px
+
+.margin-bottom-200
+  margin:
+    bottom: 200px
+
+i.sprite-icon10
+  vertical-align: bottom
