--- a/app/assets/stylesheets/_alert.sass
+++ b/app/assets/stylesheets/_alert.sass
@@ -11,9 +11,11 @@
   padding: 0
   list-style: none
 
+
   > li
     display: inline-block
     vertical-align: top
+    text-align: center
 
     &:nth-child(even)
       margin:
