--- a/app/assets/stylesheets/_type.css.sass
+++ b/app/assets/stylesheets/_type.css.sass
@@ -56,8 +56,11 @@ a
 
 .margin-bottom-30
   margin:
-    bottom: 30px
+    bottom: 30px!important
 
+.margin-bottom-40
+  margin:
+    bottom: 40px!important
 
 .margin-top-100
   margin:
