--- a/app/assets/stylesheets/_ad_unit.sass
+++ b/app/assets/stylesheets/_ad_unit.sass
@@ -1,6 +1,6 @@
 
 #ad-unit-form
-  .form-adwertasing-create .help-block-count
+  .form-advertising-create .help-block-count
     margin-bottom: 20px
     padding-top: 8px
 
