--- a/app/views/welcome/ad_unit.html.haml
+++ b/app/views/welcome/ad_unit.html.haml
@@ -48,7 +48,7 @@
 
 
 .container{id: "ad-unit-form"}
-  %form.form-horizontal.form-adwertasing-create
+  %form.form-horizontal.form-advertising-create
     .row-fluid
       .span8
         .well.well-large
@@ -231,7 +231,7 @@
           %p.muted
             By sending money to this bitcoin address you accept our 
             %a.underline{href: "#"} Terms of Service
-          %section.form-adwertasing-section-orange
+          %section.form-advertising-section-orange
             %h3
               Access Data (it will not be shown again!)
 
