--- a/app/views/welcome/advertising_complete.html.haml
+++ b/app/views/welcome/advertising_complete.html.haml
@@ -1,5 +1,5 @@
 .container
-  %form.form-horizontal.form-adwertasing-create
+  %form.form-horizontal.form-advertising-create
     .row-fluid
       .span8
         .well.well-large
@@ -30,7 +30,7 @@
                 .text-right
                   %img{src: "http://placehold.it/120x120"}
 
-          %section.form-adwertasing-section-orange
+          %section.form-advertising-section-orange
             %h3 Access Data (it will not be shown again!) 
             .margin-bottom-10
               %pre
