--- a/app/views/welcome/advertising_create.html.haml
+++ b/app/views/welcome/advertising_create.html.haml
@@ -56,7 +56,7 @@
 
 
 .container
-  %form.form-horizontal.form-adwertasing-create
+  %form.form-horizontal.form-advertising-create
     .row-fluid
       .span8
         .well.well-large
@@ -131,7 +131,7 @@
       
       .span4
         .help-block
-          .help-block-adwertasing
+          .help-block-advertising
             %a.underline.text-bold{href: "#"} Grusha
             %br
             %span Публикуй во все соцсети одновременно
@@ -152,7 +152,7 @@
 
           .row-fluid
             .span4.offset4
-              .form-adwertasing-count
+              .form-advertising-count
                 .row-fluid
                   .span4.offset2
                     %input.input-mini{type: "text", placeholder: "Email", value: "0.1"}
@@ -180,7 +180,7 @@
               .span4.offset4
                 %button.btn.btn-success.btn-large.btn-block.btn-xlarge{type: "submit"} CREATE CAMPAING!
               .span3.offset1
-                .form-adwertasing-code
+                .form-advertising-code
                   %label 
                     Coupon code
                     %i.fa.fa-check-circle.text-success
