--- a/app/assets/stylesheets/_form_create.sass
+++ b/app/assets/stylesheets/_form_create.sass
@@ -13,7 +13,7 @@
     text-decoration: none
 
 
-.form-adwertasing-create
+.form-advertising-create
   padding:
     top: 20px
     bottom: 20px
@@ -112,7 +112,7 @@
       border:
         color: transparent transparent transparent whitesmoke
 
-  .help-block-adwertasing
+  .help-block-advertising
     position: relative
     margin:
       bottom: 14px
@@ -146,14 +146,14 @@
         vertical-align: top
         display: inline-block
 
-.form-adwertasing-code
+.form-advertising-code
   label
     margin:
       bottom: 0
       left: 4px
     font-size: 16px
 
-.form-adwertasing-count
+.form-advertising-count
   margin:
     bottom: 10px
     top: 20px
@@ -175,7 +175,7 @@
 
 
 
-.form-adwertasing-section-orange
+.form-advertising-section-orange
   margin: 0 -40px 30px
   padding: 30px 40px
   background:
